sailfish-tests/integration-tests/tests/fails/templates/unbalanced_brace.stpl
<% for player in &self.players %>
  <div><%= player.name %>: <%= player.score %></div>
<% } %>
